tests/errors/closing_paren.hl
(* 8 (- 0 8))
        (+ (* 1 123) 0
